# c-minecraft-clone-1

./: .gitignore  CMakeLists.txt  README.md  generate_assets.py
assets/minecraft/shaders/: basic.frag  basic.vert  line.frag  ui.frag  ui.vert
include/entity/: Entity.hpp  EntityManager.hpp  ItemEntity.hpp  Mob.hpp
include/item/: Inventory.hpp  Item.hpp  ItemStack.hpp
include/physics/: AABB.hpp  Player.hpp  Raycast.hpp
include/render/: BlockModel.hpp  Camera.hpp  ChunkMesh.hpp  Frustum.hpp  SelectionBox.hpp  Shader.hpp  Texture.hpp  TextureAtlas.hpp
include/ui/: FontRenderer.hpp  GUIRenderer.hpp  HUD.hpp
include/util/: SoundManager.hpp
include/world/: Block.hpp  BlockState.hpp  Chunk.hpp  ChunkProvider.hpp  Lighting.hpp  World.hpp  WorldGenerator.hpp  WorldPersistence.hpp
src/: main.cpp
src/item/: Inventory.cpp
src/physics/: Player.cpp  Raycast.cpp
src/render/: BlockModel.cpp  Camera.cpp  ChunkMesh.cpp  SelectionBox.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp
src/ui/: FontRenderer.cpp  GUIRenderer.cpp  HUD.cpp
src/util/: SoundManager.cpp
src/world/: Chunk.cpp  ChunkProvider.cpp  Lighting.cpp  World.cpp  WorldGenerator.cpp  WorldPersistence.cpp
